# uipc-base-test

./: README.md
cub_test/: CMakeLists.txt  device_select.cu
